--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-sadasdad
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hos Server</title>
+</head>
+<body>
+
+</body>
+</html>
